Attempted to center contact info

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -728,7 +728,8 @@ th {
 .coninfo ul{
 	list-style: inside circle;
 	color: #fff;
-	padding-left: 10px;
+	/*padding-left: 10px;*/
+	text-align: center;
 }
 
 .consocial img{
