--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -323,6 +323,7 @@ p {
 }
 
 .rmm {
+		display:inline;
 	padding-top: 60px;
 }
 
@@ -775,6 +776,7 @@ th {
 	/* Tablet Portrait size to standard 960 (devices and browsers) */
 	@media only screen and (min-width: 768px) and (max-width: 959px) {
 	.rmm {
+		display:inline;
 	padding-top: 60px !important;
     }
     
@@ -797,6 +799,7 @@ th {
     display: none;
 	
 	.rmm {
+		display:inline;
 	padding-top: 20px !important;
     }
     
